--- a/src/test/resources/Reports/cucumber-html-reports/overview-steps.html
+++ b/src/test/resources/Reports/cucumber-html-reports/overview-steps.html
@@ -74,7 +74,7 @@ $(document).ready(function() {
   <tbody>
     <tr class="info">
       <td>Adactin_Hotel</td>
-      <td>22 Nov 2020, 10:04</td>
+      <td>02 Mar 2021, 22:50</td>
     </tr>
   </tbody>
 </table>
@@ -114,50 +114,50 @@ $(document).ready(function() {
             <tr>
               <td class="location">PageLoginSteps.checkBookingId()</td>
               <td>1</td>
-              <td class="duration" data-value="60800">0.000</td>
-              <td class="duration" data-value="60800">0.000</td>
-              <td class="duration" data-value="60800">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="36770934200">36.770</td>
+              <td class="duration" data-value="36770934200">36.770</td>
+              <td class="duration" data-value="36770934200">36.770</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">PageLoginSteps.hotel_page()</td>
               <td>1</td>
-              <td class="duration" data-value="36191421100">36.191</td>
-              <td class="duration" data-value="36191421100">36.191</td>
-              <td class="duration" data-value="36191421100">36.191</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="10610012600">10.610</td>
+              <td class="duration" data-value="10610012600">10.610</td>
+              <td class="duration" data-value="10610012600">10.610</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">PageLoginSteps.logInCredentials(String,String)</td>
               <td>1</td>
-              <td class="duration" data-value="534300">0.000</td>
-              <td class="duration" data-value="534300">0.000</td>
-              <td class="duration" data-value="534300">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="9389814000">9.389</td>
+              <td class="duration" data-value="9389814000">9.389</td>
+              <td class="duration" data-value="9389814000">9.389</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">PageLoginSteps.user_should_enter(String,String,String,String,String,String,String,String)</td>
               <td>1</td>
-              <td class="duration" data-value="213800">0.000</td>
-              <td class="duration" data-value="213800">0.000</td>
-              <td class="duration" data-value="213800">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="1427648600">1.427</td>
+              <td class="duration" data-value="1427648600">1.427</td>
+              <td class="duration" data-value="1427648600">1.427</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">PageLoginSteps.user_should_select(String,String,String,String,String,String,String,String)</td>
               <td>1</td>
-              <td class="duration" data-value="105400">0.000</td>
-              <td class="duration" data-value="105400">0.000</td>
-              <td class="duration" data-value="105400">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="28068036200">28.068</td>
+              <td class="duration" data-value="28068036200">28.068</td>
+              <td class="duration" data-value="28068036200">28.068</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">PageLoginSteps.user_should_select_the_required_hotel()</td>
               <td>1</td>
-              <td class="duration" data-value="92100">0.000</td>
-              <td class="duration" data-value="92100">0.000</td>
-              <td class="duration" data-value="92100">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="14059182600">14.059</td>
+              <td class="duration" data-value="14059182600">14.059</td>
+              <td class="duration" data-value="14059182600">14.059</td>
+              <td class="passed">100.00%</td>
             </tr>
         </tbody>
 
@@ -165,9 +165,9 @@ $(document).ready(function() {
           <tr>
             <td>6</td>
             <td>6</td>
-            <td class="duration">6.032</td>
-            <td class="duration">36.191</td>
-            <td class="duration">36.192</td>
+            <td class="duration">16.720</td>
+            <td class="duration">36.770</td>
+            <td class="duration">1:40.325</td>
             <td>Totals</td>
           </tr>
         </tfoot>
