--- a/src/test/resources/Reports/cucumber-html-reports/overview-features.html
+++ b/src/test/resources/Reports/cucumber-html-reports/overview-features.html
@@ -50,9 +50,9 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
+                6,
                 0,
-                1,
-                5,
+                0,
                 0,
                 0
             ],
@@ -106,8 +106,8 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
-                0,
-                1
+                1,
+                0
             ],
             backgroundColor: [
                 "#00B000",
@@ -153,8 +153,8 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
-                   0,
-                   1
+                   1,
+                   0
                ],
                backgroundColor: [
                 "#00B000",
@@ -228,7 +228,7 @@ $(document).ready(function() {
   <tbody>
     <tr class="info">
       <td>Adactin_Hotel</td>
-      <td>22 Nov 2020, 10:04</td>
+      <td>02 Mar 2021, 22:50</td>
     </tr>
   </tbody>
 </table>
@@ -347,52 +347,52 @@ $(document).ready(function() {
       <tr>
         <td class="tagname"><a href="report-feature_459090155.html">Verify adatin hotel details</a></td>
 
+        <td      class="passed"    >6</td>
         <td >0</td>
-        <td      class="failed"    >1</td>
-        <td     class="skipped"   >5</td>
+        <td >0</td>
         <td >0</td>
         <td >0</td>
         <td class="total">6</td>
 
+        <td  class="passed"    >1</td>
         <td >0</td>
-        <td  class="failed"    >1</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="36192427500">36.192</td>
-        <td class="failed">Failed</td>
+        <td class="duration" data-value="100325628200">1:40.325</td>
+        <td class="passed">Passed</td>
       </tr>
   </tbody>
 
   <tfoot class="total">
     <tr>
       <td></td>
+      <td>6</td>
       <td>0</td>
-      <td>1</td>
-      <td>5</td>
+      <td>0</td>
       <td>0</td>
       <td>0</td>
       <td>6</td>
 
+      <td>1</td>
       <td>0</td>
       <td>1</td>
-      <td>1</td>
 
-      <td class="duration">36.192</td>
+      <td class="duration">1:40.325</td>
       <td>1</td>
     </tr>
     <tr>
       <td></td>
-      <td>0.00%</td>
-      <td>16.67%</td>
-      <td>83.33%</td>
-      <td>0.00%</td>
-      <td>0.00%</td>
-      <td></td>
-      <td>0.00%</td>
       <td>100.00%</td>
-      <td></td>
-      <td></td>
       <td>0.00%</td>
+      <td>0.00%</td>
+      <td>0.00%</td>
+      <td>0.00%</td>
+      <td></td>
+      <td>100.00%</td>
+      <td>0.00%</td>
+      <td></td>
+      <td></td>
+      <td>100.00%</td>
     </tr>
   </tfoot>
 </table>
